<resources>
    <string name="app_name">Coding Bootcamp Simulator</string>
    <string name="app_author">Developed by Jaime Lopez</string>
    <string name="app_version">Version 2.0</string>
    <string name="tutorial" translatable="false">Tutorial</string>
    <string name="saved_game" translatable="false">SAVED GAME</string>
    <string name="menu_start">Start Menu</string>
    <string name="menu_log">Previous Students</string>
    <string name="menu_about">About the Game</string>
    <string name="menu_exit">Go back to Start Menu</string>
    <string name="menu_exit_app">Exit App</string>
    <string name="menu_diary">Student Journal</string>
    <string name="reset_ranking">Reset Ranking</string>
    <string name="toast_menu_start">Start Menu</string>
    <string name="toast_menu_log">Previous Students</string>
    <string name="toast_menu_about">About the Game</string>
    <string name="toast_menu_exit">Exit Game</string>
    <string name="toast_menu_cannot_load">There is no saved game</string>
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>
    <string name="ranking">Ranking</string>
    <string name="new_player">Introduce new student name</string>
    <string name="new_player_short">Student name</string>
    <string name="title_bar_week">Week\ </string>
    <string name="title_bar_day">\ \ Day\ </string>
    <string name="tutorial_explanation" translatable="false">Hello player! This game puts you in the skin of a student on an intensive software developer course. You\'re changing careers, so your objective is to get to the end of the course to be able to get a new job. The course is 16 weeks long, so you need to keep focused and balanced all your stats to succeed. Remember, too high is as bad as too low.</string>
    <string name="anxiety_explanation">This shows your Anxiety level</string>
    <string name="social_life_explanation">This shows your Social Life level</string>
    <string name="money_explanation">This shows your Money level</string>
    <string name="sleep_explanation">This shows your Sleep level</string>
    <string name="tutorial_button">Understood</string>
    <string name="end_scene_win" translatable="false">You have succeeded on completing the whole intensive software developer program. You invested tons of time and money, but thanks to that, now you have become a junior developer</string>
    <string name="about_info" translatable="false">This app was developed during week 9 of the CodeClan intensive programming course. Based on a card game project brief, I have tweaked the idea into a simulation game. The player receives a card representing an event during the (parodic) daily life of a bootcamp student and their decision will affect a set of stats (money, sleep, anxiety, social life). If they are not balanced, they drop the course and the game will finish.

MVP is to have the Game logic developed in JAVA, and afterwards, as an extension, this will be transferred into a basic Android UI. As a final task, the ability to load/save the game and a ranking log with past game scores recorded with SQLite through Android Room.</string>
    <string name="icon_credits" translatable="false">Icons made by dDara from www.flaticon.com are licensed Creative Commons BY 3.0</string>
    <string name="git_repo" translatable="false">If you\'re interested on looking at the source code, I encourage you to access the GitHub repo I posted on the following link: https://github.com/DetectiveAzul/codeclan_student_simulator</string>
    <string name="neutral" translatable="false">Neutral</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="extra_hard">Extra-Hard</string>
    <string name="win">Congratulations! You have complete the intensive coding course!</string>
    <string name="lose">"It's a shame, but you failed!"</string>
    <string name="in_progress">Game is still in progress</string>
    <string name="student">One of your classmates</string>
    <string name="teacher">Today\'s instructor</string>
    <string name="flatmate">Your flatmate</string>
    <string name="money">Money</string>
    <string name="money_over" translatable="false">You quit the course after saving so much money that you feel you could live off it the rest of your life</string>
    <string name="money_below" translatable="false">You quit the course after discovering your bank account is below zero. You need to find a job real quick</string>
    <string name="anxiety">Anxiety</string>
    <string name="anxiety_over" translatable="false">Too much social life distracts you from your studies, making you fail the final exams. Next time, maybe</string>
    <string name="anxiety_below" translatable="false">You lose all your friends because you only focused on your studies. You\'re so sad that you quit the course</string>
    <string name="sleep">Sleep</string>
    <string name="sleep_over" translatable="false">You wake up after two years of being comatose due to an Anxiety attack. Chill out, next time</string>
    <string name="sleep_below" translatable="false">You achieve such a relaxed way of life that you have ascended to Nirvana. Shame there aren\'t any computers there</string>
    <string name="social_life">Social Life</string>
    <string name="social_life_over" translatable="false">What? Uh? What year it is? You have spent your whole 16 weeks sleeping!</string>
    <string name="social_life_below" translatable="false">You fell asleep on your finals. You should take a break from time to time</string>
    <string name="m1c01_name" translatable="false">Beer Afternoon</string>
    <string name="m1c01_description" translatable="false">Hey, Do you want to hang out with us?</string>
    <string name="m1c01_first_option" translatable="false">Oh, sure! A beer sounds fine</string>
    <string name="m1c01_second_option" translatable="false">I need to save money, sorry</string>
    <string name="m1c02_name" translatable="false">Silicon Valley</string>
    <string name="m1c02_description" translatable="false">"I\'m starting Silicon Valley, do you want to see the first episode with me?"</string>
    <string name="m1c02_first_option" translatable="false">First episode only?</string>
    <string name="m1c02_second_option" translatable="false">You never watch just an episode</string>
    <string name="m1c03_name" translatable="false">Teacher tip</string>
    <string name="m1c03_description" translatable="false">I really think if you re-factor all this code it\'s gonna be easier to continue</string>
    <string name="m1c03_first_option" translatable="false">Re-factoring all night long</string>
    <string name="m1c03_second_option" translatable="false">Leave it, I need sleep</string>
    <string name="m1c04_name" translatable="false">Freelancing</string>
    <string name="m1c04_description" translatable="false">I have a friend that would like to have a website. They will pay you</string>
    <string name="m1c04_first_option" translatable="false">Extra money sounds great, but I\'ll need to work extra</string>
    <string name="m1c04_second_option" translatable="false">No way man, studying is hard enough</string>
    <string name="m1c05_name" translatable="false">Cinema night</string>
    <string name="m1c05_description" translatable="false">Latest Marvel movie is on screen, you have been speaking of it for the last year</string>
    <string name="m1c05_first_option" translatable="false">I don\'t have money, but I hate spoilers</string>
    <string name="m1c05_second_option" translatable="false">Well, I can avoid spoilers for some time</string>
    <string name="m1c06_name" translatable="false">Cat Meme</string>
    <string name="m1c06_description" translatable="false">Look, look, this latest cat meme is great</string>
    <string name="m1c06_first_option" translatable="false">Spend the whole night memeing</string>
    <string name="m1c06_second_option" translatable="false">Grow up, these memes are for kids</string>
    <string name="m1c07_name" translatable="false">Student in Need</string>
    <string name="m1c07_description" translatable="false">I know you’re about to head home but I’m really stuck on my code, do you mind giving it a look?</string>
    <string name="m1c07_first_option" translatable="false">Of course! What are cohortmates for?!</string>
    <string name="m1c07_second_option" translatable="false">I’m exhausted, I’m going home</string>
    <string name="m1c08_name" translatable="false">All Day Lab</string>
    <string name="m1c08_description" translatable="false">OK, today is an all day lab. Brace brace!</string>
    <string name="m1c08_first_option" translatable="false">I’m going to take regular breaks to make sure I do my work properly</string>
    <string name="m1c08_second_option" translatable="false">Hey guys, let’s get into a group and work together</string>
    <string name="m1c09_name" translatable="false">Cheating?</string>
    <string name="m1c09_description" translatable="false">I will pay you £500 if you do my Java project</string>
    <string name="m1c09_first_option" translatable="false">Hmmm, I could really do with some money</string>
    <string name="m1c09_second_option" translatable="false">No way man!</string>
    <string name="m1c10_name" translatable="false">Pizza Evening</string>
    <string name="m1c10_description" translatable="false">Forget your homework, let’s order in some pizza and play a board game</string>
    <string name="m1c10_first_option" translatable="false">That’s exactly what I need today</string>
    <string name="m1c10_second_option" translatable="false">Sorry, homework comes first!</string>
    <string name="m1c11_name" translatable="false">Broken Fridge</string>
    <string name="m1c11_description" translatable="false">Our fridge just died</string>
    <string name="m1c11_first_option" translatable="false">Damn, we should buy a new one</string>
    <string name="m1c11_second_option" translatable="false">Nah, I\'ll buy paninis everyday</string>
    <string name="m1c12_name" translatable="false">Stolen Charger</string>
    <string name="m1c12_description" translatable="false">Your laptop charger disappeared during Boardgame night</string>
    <string name="m1c12_first_option" translatable="false">Damn it! I\'ll blame the cohort and recover it</string>
    <string name="m1c12_second_option" translatable="false">I guess I\'m buying a new one</string>
    <string name="m1c13_name" translatable="false">Nested For Loops</string>
    <string name="m1c13_description" translatable="false">We\'re grouping together to study nested loops tonight</string>
    <string name="m1c13_first_option" translatable="false">Great! I\'ll join you guys!</string>
    <string name="m1c13_second_option" translatable="false">It\'s really late, I\'ll head home</string>
    <string name="m1c14_name" translatable="false">S.O.L.I.D.</string>
    <string name="m1c14_description" translatable="false">Your homework today is to watch this series of videos about Object Oriented Principles</string>
    <string name="m1c14_first_option" translatable="false">I still need to study yesterday\'s class </string>
    <string name="m1c14_second_option" translatable="false">I can study, watch the videos then, no sleep tonight</string>
    <string name="m1c15_name" translatable="false">Lids Up</string>
    <string name="m1c15_description" translatable="false">Oh, shit, sorry. I drip coffee on your keyboard</string>
    <string name="m1c15_first_option" translatable="false">C\'mon man! Buy me a new one</string>
    <string name="m1c15_second_option" translatable="false">Shit happens, don\'t worry!</string>
    <string name="m1c16_name" translatable="false">Tons of Bugs</string>
    <string name="m1c16_description" translatable="false">Your code is compiling, but there are several bugs on it that keep it far from functional work</string>
</resources>